chore: fix definitions
